# Carnot

./: .gitignore  Carnot.cabal  README.md  bench  default.nix  start-bench-dev  start-dev
.circleci/: config.yml
benchmarks/: Main.hs
example/: Main.hs
scripts/: start-dev
src/: Benchmarks.hs  Delude.hs  Engine.hs  HasField.hs  HasPattern.hs  Main.hs  Tests.hs
src/Benchmarks/: GridIndex.hs  KDTree.hs
src/Data/: ArrayType.hs  Collider.hs  FullMap.hs  GridIndex.hs  GrowVector.hs  QuadTree.hs  SpatialIndex.hs  VectorIndex.hs  ZMap.hs
src/Data/Collider/: Types.hs
src/Data/GridIndex/: Types.hs
src/Data/QuadTree/: Types.hs
src/Data/SpatialIndex/: Types.hs
src/Data/VectorIndex/: Types.hs
src/Engine/: Benchmark.hs  Context.hs  Debug.hs  Events.hs  FontsManager.hs  Graphics.hs  HasField.hs  HasPattern.hs  KDTree.hs  Loop.hs  TH.hs  Types.hs
src/Engine/Backend/: Types.hs
src/Engine/Common/: Types.hs
src/Engine/Events/: Types.hs
src/Engine/FontsManager/: FreeTypeError.hs  Types.hs  Utils.hs
src/Engine/Graphics/: Buffer.hs  DrawBatchCache.hs  RenderAction.hs  Scroller.hs  ScrollerAlt.hs  TaskManager.hs  TextureAtlas.hs  TextureCache.hs  Types.hs  Utils.hs
src/Engine/Graphics/Buffer/: Types.hs
src/Engine/Graphics/Draw/: Atlas.hs  Atlas1.hs  Common.hs  Shape.hs  Text.hs  Texture.hs
src/Engine/Graphics/DrawBatchCache/: Types.hs
src/Engine/Graphics/Scroller/: Cells.hs  Types.hs  TypesAlt.hs  TypesCells.hs
src/Engine/Graphics/TextureAtlas/: Types.hs
src/Engine/Graphics/TextureCache/: Types.hs
src/Engine/KDTree/: Types.hs
src/Engine/Layout/: Alt.hs  Render.hs  Types.hs
src/Engine/Layout/Alt/: Examples.hs  Lens.hs
src/Engine/Lens/: Utils.hs
src/Experiments/: Baseline.hs  Common.hs  Current.hs  Draw01.hs  Draw02.hs  Draw03.hs  Draw04.hs
src/Main/: AltLayout.hs  Misc.hs  QuadTree.hs  Scroller.hs
src/Tests/: GridIndex.hs  KDTree.hs  QuadTree.hs  Utils.hs
