Name          : Carnot
Version       : 0.1.16.1
License       : BSD3
-- License-File  : LICENSE
Author        : Maksymilian Owsianny
Maintainer    : Maksymilian.Owsianny@gmail.com
Homepage      : https//github.com/MaxOw/Carnot
Bug-Reports   : https//github.com/MaxOw/Carnot/issues
Build-Type    : Simple
Cabal-Version : >= 1.18

Source-Repository head
  type:     git
  location: https://github.com/MaxOw/Carnot.git

flag build-example
  description: Build the example executable.
  default: False

flag build-benchmark
  description: Build benchmark.
  default: False

library
-- executable Carnot
  default-language: Haskell2010
  hs-source-dirs:   src
  -- hs-source-dirs:   src, example
  -- main-is:          Main.hs
  ghc-options:
    -O2
    -Wall
    -fdiagnostics-color=always
    -fno-warn-missing-pattern-synonym-signatures
    -Werror=missing-fields
    -Werror=incomplete-patterns

  default-extensions:
      NoImplicitPrelude
    , DoAndIfThenElse
    , LambdaCase
    , MultiWayIf
    , TupleSections
    , OverloadedStrings
    , PatternSynonyms

    , TypeOperators
    , TypeApplications
    , TypeSynonymInstances
    , FlexibleInstances
    , FlexibleContexts
    , MultiParamTypeClasses
    , FunctionalDependencies
    , DuplicateRecordFields
    , DataKinds
    , OverloadedLabels

    , DeriveGeneric
    , DeriveFunctor
    , DeriveTraversable
    , DeriveFoldable
    , GeneralizedNewtypeDeriving

    , BangPatterns

  exposed-modules:
        Engine
        Engine.TH
        Engine.Loop
        Engine.Types
        Engine.Backend.Types
        Engine.Common.Types
        Engine.FontsManager
        Engine.FontsManager.FreeTypeError
        Engine.FontsManager.Types
        Engine.FontsManager.Utils
        Engine.Events
        Engine.Events.Types
        Engine.Graphics
        Engine.Graphics.Buffer
        Engine.Graphics.Buffer.Types
        Engine.Graphics.Utils
        Engine.Graphics.Types
        -- Engine.Graphics.Draw
        -- Engine.Graphics.Draw.Shape
        Engine.Graphics.TextureAtlas
        Engine.Graphics.TextureAtlas.Types
        Engine.Graphics.Scroller
        Engine.Graphics.Scroller.Types
        Engine.Graphics.Draw.Atlas
        -- Engine.Graphics.Draw.Texture
        Engine.KDTree
        Engine.KDTree.Types
        Engine.Layout.Render
        Engine.Layout.Types

        Engine.Layout.Alt
        Engine.Layout.Alt.Lens
        Engine.Lens.Utils

        Engine.Context

        Engine.Benchmark

        Engine.HasField
        Engine.HasPattern

        Data.GridIndex
        Data.GridIndex.Types
        Data.QuadTree
        Data.QuadTree.Types
        Data.SpatialIndex
        Data.SpatialIndex.Types
        Data.VectorIndex
        Data.VectorIndex.Types
        Data.FullMap

        Data.Collider
        Data.Collider.Types

        Benchmarks
        Benchmarks.GridIndex
        Benchmarks.KDTree

        Tests.Utils
        Tests.QuadTree
        Tests

  other-modules:
        Delude
        -- Main

        Experiments.Baseline
        Experiments.Draw01
        Experiments.Draw02
        Experiments.Draw03
        Experiments.Common

  build-depends : base >= 4.5 && < 5.0
                , stm
                , mtl
                , array
                , vector
                , vector-algorithms
                , containers
                , unordered-containers
                , deepseq
                , relude
                , protolude
                , directory
                , template-haskell
                , bytestring
                , split
                , derive-storable
                , quickselect
                , exceptions
                , ansi-wl-pprint
                , proxied

                , lens
                , generic-lens >= 1.1.0.0
                , data-default
                , linear
                , boundingboxes

                , diagrams-core
                , diagrams-lib
                , colour

                , gl
                , GLFW-b
                , JuicyPixels
                , freetype2
                , FTGL
                -- , freetype-simple

                , criterion
                , criterion-measurement
                , weigh

                , tasty
                , tasty-hunit
                , tasty-golden
                , tasty-smallcheck
                , tasty-quickcheck
                , HUnit
                , smallcheck
                , QuickCheck
                , tree-diff

                , reload-utils


executable Carnot
  if !flag(build-example)
    buildable:      False
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:
    -O2
    -Wall
    -fdiagnostics-color=always
    -fno-warn-missing-pattern-synonym-signatures
    -fno-warn-missing-home-modules
    -Werror=missing-fields
    -Werror=incomplete-patterns

  default-extensions:
      NoImplicitPrelude
    , DoAndIfThenElse
    , LambdaCase
    , MultiWayIf
    , TupleSections
    , OverloadedStrings
    , PatternSynonyms

    , TypeOperators
    , TypeApplications
    , TypeSynonymInstances
    , FlexibleInstances
    , FlexibleContexts
    , MultiParamTypeClasses
    , FunctionalDependencies
    , DuplicateRecordFields
    , DataKinds
    , OverloadedLabels

    , DeriveGeneric
    , DeriveFunctor
    , DeriveTraversable
    , DeriveFoldable
    , GeneralizedNewtypeDeriving

    , BangPatterns

  build-depends : base >= 4.5 && < 5.0
                , stm
                , mtl
                , array
                , vector
                , containers
                , unordered-containers
                , deepseq
                , relude
                , protolude
                , directory
                , template-haskell
                , bytestring
                , split
                , derive-storable
                , quickselect
                , exceptions
                , ansi-wl-pprint
                , proxied

                , Carnot

                , lens
                , generic-lens >= 1.1.0.0
                , data-default
                , linear
                , boundingboxes

                , diagrams-core
                , diagrams-lib
                , colour

                , gl
                , GLFW-b
                , JuicyPixels
                , freetype2
                , FTGL
                -- , freetype-simple

                , criterion
                , criterion-measurement
                , weigh

                , reload-utils

                , tasty
                , tasty-hunit
                , tasty-golden
                , tasty-smallcheck
                , tasty-quickcheck
                , HUnit
                , smallcheck
                , QuickCheck
                , tree-diff


executable benchmark
  if !flag(build-benchmark)
    buildable:        False
  default-language: Haskell2010
  hs-source-dirs:   benchmarks
  main-is:          Main.hs
  ghc-options:
    -O2
    -Wall
    -fno-warn-missing-pattern-synonym-signatures
    -fno-warn-missing-home-modules
    -fno-warn-unused-imports
    -Werror=missing-fields
    -Werror=incomplete-patterns

  build-depends : base >= 4.5 && < 5.0
                , Carnot
